test/ui/src/compile_fail/std/dbg_props_line.rs
fn main() {
    emit::dbg!(line: "x");
}
